frontend/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stormmind.ch`)
      kind: Rule
      services:
        - name: frontend-service
          port: 80
  tls:
    secretName: stormmind-ch-tls
#    certResolver: letsencrypt-prod
#    domains:
#      - main: stormmind.ch
